<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Distance">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            </androidx.appcompat.widget.Toolbar>
            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"

                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/distance_text"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="50dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginStart="20dp"
                            app:cardCornerRadius="10dp"
                            >
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"

                                >
                                <EditText
                                    android:id="@+id/steps"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/distance_hint"
                                    android:textSize="16sp"
                                    android:padding="10dp"
                                    android:background="@drawable/fields"
                                    android:layout_marginLeft="20dp"
                                    android:layout_gravity="center"
                                    android:layout_marginRight="20dp"
                                    android:ems="10"
                                    android:inputType="numberDecimal"
                                    />
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="-2dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/diameter_text"
                    android:textColor="@android:color/black"
                    android:padding="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="14sp">

                </TextView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="15dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    app:cardCornerRadius="10dp"
                    >
                    <EditText
                        android:id="@+id/diameter_of_tree"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/diameter_hint"
                        android:textSize="16sp"
                        android:padding="10dp"
                        android:background="@drawable/fields"
                        android:layout_marginLeft="20dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        />
                </androidx.cardview.widget.CardView>
                <Button
                    android:id="@+id/cali_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="next"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="90dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_bkgd"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>