<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DashBoard"
    android:background="#EBEBEB"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toTopOf="@+id/header_layout"
        >

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/header_bak"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        >
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EBEBEB"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp"
            android:elevation="10dp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:src="@drawable/lumslogo" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp"
            android:elevation="10dp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/ncra"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/profile_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="7dp"
                    android:elevation="50dp"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:src="@drawable/ic_profile">
                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dashboard_profile"
                            android:textSize="14sp"
                            android:textColor="@android:color/black"
                            android:padding="2dp"
                            >
                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/Explore_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardCornerRadius="7dp"
                    android:elevation="50dp"
                    android:background="@drawable/white_background"
                    android:layout_marginStart="50dp"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:src="@drawable/map">
                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/explore"
                            android:textColor="@android:color/black"
                            android:padding="2dp"
                            android:textSize="14sp">

                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/contact_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="7dp"
                    android:elevation="50dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:src="@drawable/ic_contact_mail_black_24dp">
                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/contact_us"
                            android:textSize="14sp"
                            android:textColor="@android:color/black"
                            android:padding="2dp"
                            >
                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/about_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/white_background"
                    android:layout_marginStart="50dp"
                    app:cardCornerRadius="7dp"
                    android:elevation="50dp"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:src="@drawable/ic_group_black_24dp">
                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_us"
                            android:textColor="@android:color/black"
                            android:padding="2dp"
                            android:textSize="14sp">
                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/main_text"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/strbttn"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_height="wrap_content"
        android:text="Start"
        android:background="@drawable/button_bkgd"
        android:layout_gravity="center"
        />
</LinearLayout>
